--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "eslint-config-defaults": "^9.0.0",
     "jquery": "^3.3.1",
     "jquery-validation": "^1.17.0",
-    "jquery-validation-unobtrusive": "^3.2.6"
+    "jquery-validation-unobtrusive": "^3.2.6",
+    "popper.js": "^1.12.9"
   }
 }
