tidier package.json

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,13 +1,6 @@
 {
   "name": "frontend-boilerplate",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "MIT",
+  "private": true,
   "devDependencies": {
     "babel-eslint": "^8.2.2",
     "bootstrap": "^4.0.0",
