--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,13 +2,30 @@
   "name": "frontend-boilerplate",
   "private": true,
   "devDependencies": {
+    "babel-preset-env": "^1.6.1",
+    "babelify": "^7.3.0",
     "babel-eslint": "^8.2.2",
     "bootstrap": "^4.0.0",
+    "browserify": "^14.4.0",
+    "del": "^3.0.0",
+    "font-awesome": "4.7.0",
+    "gulp": "^3.9.1",
+    "gulp-header": "^1.8.9",
+    "gulp-rename": "1.2.2",
+    "gulp-sass": "^3.1.0",
+    "gulp-sass-lint": "^1.3.2",
+    "gulp-sourcemaps": "^2.4.1",
+    "gulp-uglify": "^3.0.0",
+    "gulp-uglifycss": "1.0.8",
     "eslint": "^4.18.1",
     "eslint-config-defaults": "^9.0.0",
     "jquery": "^3.3.1",
     "jquery-validation": "^1.17.0",
     "jquery-validation-unobtrusive": "^3.2.6",
-    "popper.js": "^1.12.9"
+    "node-notifier": "^5.1.2",
+    "popper.js": "^1.12.9",
+    "require-dir": "^1.0.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
