--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,7 @@
     "gulp-sass": "^3.1.0",
     "gulp-sass-lint": "^1.3.2",
     "gulp-sourcemaps": "^2.4.1",
-    "gulp-uglify": "^3.0.0",
+    "gulp-uglify-es": "^1.0.1",
     "gulp-uglifycss": "1.0.8",
     "eslint": "^4.18.1",
     "eslint-config-defaults": "^9.0.0",
