--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/fontawesome-free-solid": "5.0.6",
     "@fortawesome/fontawesome-free-regular": "5.0.6",
     "gulp": "^3.9.1",
+    "gulp-eslint": "^4.0.2",
     "gulp-header": "^1.8.9",
     "gulp-rename": "1.2.2",
     "gulp-sass": "^3.1.0",
