--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,4 @@
 {
-  "name": "frontend-boilerplate",
   "private": true,
   "paths": {
     "src": {
@@ -11,6 +10,21 @@
       "css": "/css",
       "js": "/js"
     }
+  },
+  "scripts": {
+    "precommit": "node ./node_modules/pretty-quick/bin/pretty-quick.js --staged"
+  },
+  "babel": {
+    "presets": [
+      [
+        "@babel/preset-env",
+        {
+          "targets": {
+            "browsers": ["last 2 versions"]
+          }
+        }
+      ]
+    ]
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.48",
