--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@ node_modules
 
 # we ignore the package lock since this is boilerplate not an actual project
 package-lock.json
+
+# ignore any output built by testing the boilerplate
+wwwroot
