--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 node_modules
+
+# we ignore the package lock since this is boilerplate not an actual project
+package-lock.json
+
+# ignore any output built by testing the boilerplate
+wwwroot
