--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,46 +14,49 @@
   "scripts": {
     "precommit": "node ./node_modules/pretty-quick/bin/pretty-quick.js --staged"
   },
+  "eslintConfig": {
+    "extends": "@universityofnottingham"
+  },
   "babel": {
     "presets": [
       [
         "@babel/preset-env",
         {
           "targets": {
-            "browsers": ["last 2 versions"]
+            "browsers": [
+              "last 2 versions"
+            ]
           }
         }
       ]
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.48",
-    "@babel/preset-env": "^7.0.0-beta.48",
-    "@fortawesome/fontawesome": "^1.1.8",
-    "@fortawesome/fontawesome-free-regular": "^5.0.13",
-    "@fortawesome/fontawesome-free-solid": "^5.0.13",
-    "babel-eslint": "^8.2.3",
-    "babelify": "^9.0.0",
-    "bootstrap": "^4.1.1",
+    "@babel/core": "^7.0.1",
+    "@babel/preset-env": "^7.0.0",
+    "@fortawesome/fontawesome-free": "^5.3.1",
+    "babel-eslint": "^9.0.0",
+    "babelify": "^10.0.0",
+    "bootstrap": "^4.1.3",
     "browserify": "^16.2.2",
     "del": "^3.0.0",
-    "eslint": "^4.19.1",
-    "eslint-config-defaults": "^9.0.0",
+    "eslint": "^5.5.0",
+    "@universityofnottingham/eslint-config": "^1.0.0",
     "gulp": "^4.0.0",
-    "gulp-eslint": "^4.0.2",
+    "gulp-eslint": "^5.0.0",
     "gulp-header": "^2.0.5",
-    "gulp-rename": "^1.2.3",
+    "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.1",
     "gulp-sass-lint": "^1.4.0",
-    "gulp-sourcemaps": "^2.4.1",
+    "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify-es": "^1.0.4",
-    "gulp-uglifycss": "^1.0.9",
+    "gulp-uglifycss": "^1.1.0",
     "husky": "^0.14.3",
     "jquery": "^3.3.1",
-    "jquery-validation": "^1.17.0",
+    "jquery-validation": "^1.18.0",
     "jquery-validation-unobtrusive": "^3.2.10",
-    "popper.js": "^1.14.3",
-    "prettier": "^1.12.1",
+    "popper.js": "^1.14.4",
+    "prettier": "^1.14.2",
     "pretty-quick": "^1.6.0",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0"
