--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,9 @@
     }
   },
   "scripts": {
-    "precommit": "node ./node_modules/pretty-quick/bin/pretty-quick.js --staged"
+    "precommit": "pretty-quick --staged"
   },
+  "sasslintConfig": "./node_modules/@universityofnottingham/sasslint-config/.sass-lint.yml",
   "eslintConfig": {
     "extends": "@universityofnottingham"
   },
@@ -35,13 +36,14 @@
     "@babel/core": "^7.0.1",
     "@babel/preset-env": "^7.0.0",
     "@fortawesome/fontawesome-free": "^5.3.1",
+    "@universityofnottingham/eslint-config": "^1.0.0",
+    "@universityofnottingham/sasslint-config": "^1.0.0",
     "babel-eslint": "^9.0.0",
     "babelify": "^10.0.0",
     "bootstrap": "^4.1.3",
     "browserify": "^16.2.2",
     "del": "^3.0.0",
     "eslint": "^5.5.0",
-    "@universityofnottingham/eslint-config": "^1.0.0",
     "gulp": "^4.0.0",
     "gulp-eslint": "^5.0.0",
     "gulp-header": "^2.0.5",
