--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,7 +44,7 @@
     "browserify": "^16.2.2",
     "del": "^3.0.0",
     "eslint": "^4.19.1",
-    "eslint-config-defaults": "^9.0.0",
+    "@universityofnottingham/eslint-config": "^1.0.0",
     "gulp": "^4.0.0",
     "gulp-eslint": "^5.0.0",
     "gulp-header": "^2.0.5",
