--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,7 +34,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.1",
-    "@babel/preset-env": "^7.0.0-beta.48",
+    "@babel/preset-env": "^7.0.0",
     "@fortawesome/fontawesome-free": "^5.3.1",
     "babel-eslint": "^9.0.0",
     "babelify": "^10.0.0",
